# ai-terminal

./: ARCHITECTURE.md  CHAT_TEST_AGENT.poml  CODEBASE_SURVEY_REPORT.md  COMPLETION_SUMMARY.md  Cargo.toml  DEBUG_FIXES.md  EXTERNAL_CONTEXT_ENGINE_ANALYSIS.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SUMMARY.md  FREEZING_FIX.md  HANDS_ON_EXAMPLE.md  IMPLEMENTATION_SUMMARY.md  MARKDOWN_RENDERER_FINAL_SUMMARY.md  README.md  SHELL_FEATURES_IMPLEMENTATION_REPORT.md  SUCCESSFUL_INTEGRATION_SUMMARY.md  TERMINAL_FEATURES.md  config.toml  feature-spec.md  quick_test.sh  run-gui.sh  run.sh  run_gui.sh  start.sh  test_chat.py  test_chat.sh  test_functionality.sh  test_integration.sh
AI-Terminal/specs/: plan.md  spec.md  tasks.md
_archive/ai_terminal_v1/: Cargo.toml  ENHANCED_FEATURES_DESIGN.md  ISSUES_AND_RESOLUTIONS.md  PROGRESS_REPORT.md  README.md  RUST_BEGINNER_WALKTHROUGH.md  STATUS.md  SYSTEM_TOOLS_INTEGRATION.md  SYSTEM_TOOLS_TEST_REPORT.md  current-state-analysis.md  debug_issues.sh  debug_ollama.rs  test_e2e.sh  test_input.py  test_interactive_terminal.sh  test_keyboard.sh  test_system_tools.rs  test_terminal_response.sh
_archive/ai_terminal_v1/ai-terminal/: Cargo.toml
_archive/ai_terminal_v1/ai-terminal/src/: main.rs
_archive/ai_terminal_v1/docs/: WSL_KEYBOARD_FIX.md
_archive/ai_terminal_v1/egui-ui/: Cargo.toml
_archive/ai_terminal_v1/egui-ui/src/: lib.rs
_archive/ai_terminal_v1/ollama-client/: Cargo.toml
_archive/ai_terminal_v1/python-bridge/: Cargo.toml
_archive/ai_terminal_v1/python-bridge/src/: lib.rs
_archive/ai_terminal_v1/python-bridge/tests/: basic_test.rs  integration_test.rs
_archive/ai_terminal_v1/spec-kit/: README.md
_archive/ai_terminal_v1/specs/: current-state-analysis.md
_archive/ai_terminal_v1/specs/001-warp-terminal-clone/: feature-spec.md  implementation-plan.md
_archive/ai_terminal_v1/specs/chat/: core-functionality.yaml
_archive/ai_terminal_v1/src/: gui_system_tools_integration.rs  main.rs  system_tools_integration.rs
_archive/ai_terminal_v1/system-tools/: Cargo.toml
_archive/ai_terminal_v1/system-tools/src/: security.rs
_archive/ai_terminal_v1/terminal-emulator/: Cargo.toml
_archive/ai_terminal_v1/terminal-emulator/src/: command_block.rs  command_history.rs  lib.rs
_archive/ai_terminal_v1/terminal-ui/: Cargo.toml
_archive/ai_terminal_v1/terminal-ui/src/: lib.rs  workspace.rs
_archive/ai_terminal_v1/terminal-ui/tests/: chat_integration.rs
ai-terminal/: Cargo.toml
ai-terminal/src/: config.rs  main.rs
ai-terminal/src/mcp/: ai_command_processor.rs  client.rs  mod.rs
memory/: constitution.md
ollama-client/: Cargo.toml
ollama-client/src/: api.rs  error.rs  history.rs  lib.rs  mcp.rs  models.rs
ollama-client/tests/: api_tests.rs  history_tests.rs
python-bridge/: Cargo.toml
python-bridge/src/: lib.rs
spec-kit/specs/: chat.spec.yaml  system-tools.spec.yaml
specs/: README.md
specs/001-warp-terminal-clone/: tasks.md
specs/ai-terminal-v2/: FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_PLAN.md  INTEGRATION_GUIDE.md  UPDATED_LIB_RS.md  plan.md  spec.md  tasks.md
src/: gui_main.rs  main.rs
system-tools/src/: filesystem.rs  lib.rs  network.rs  process.rs
system-tools/tests/: integration_test.rs
terminal-emulator/: Cargo.toml
terminal-emulator/src/: command_block.rs  command_history.rs  lib.rs  pty_executor.rs
terminal-emulator/tests/: command_history_tests.rs  emulator_tests.rs  persistence_test.rs
terminal-ui/: Cargo.toml  IMPLEMENTATION_REPORT.md  MARKDOWN_RENDERER_SUMMARY.md  TODO_MODULE_IMPORTS.md  example-theme.toml  libpane.rlib  libpane.rmeta  sample-theme.toml  test_imports  test_imports.rs  test_module_imports.rs  test_pane.rs  test_pane_direct.rs  test_pane_imports  test_pane_imports.rs
terminal-ui/config/: theme.toml
terminal-ui/examples/: markdown_rendering.rs
terminal-ui/src/: lib.rs  main.rs  markdown_renderer.rs  pane_test.rs
terminal-ui/src/layout/: manager.rs  mod.rs  pane.rs  tab.rs
terminal-ui/src/theme/: manager.rs  mod.rs  presets.rs
terminal-ui/src/widgets/: command_block.rs  command_palette.rs  confirmation_modal.rs  mod.rs
terminal-ui/tests/: confirmation_modal_tests.rs  integration_tests.rs  layout_tests.rs  theme_tests.rs  ui_tests.rs  widget_tests.rs
tests/: integration_tests.rs
