[workspace]
members = [
    "terminal-ui",
    "ollama-client", 
    "python-bridge"
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Terminal UI
ratatui = "0.28"
crossterm = "0.28"

# HTTP client for Ollama
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Python integration
pyo3 = { version = "0.22", features = ["auto-initialize"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
clap = { version = "4.0", features = ["derive"] }

[package]
name = "ai-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
terminal-ui = { path = "terminal-ui" }
ollama-client = { path = "ollama-client" }
python-bridge = { path = "python-bridge" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
