[workspace]
members = [
    "terminal-ui",
    "egui-ui",
    "terminal-emulator",
    "ollama-client", 
    "python-bridge",
    "system-tools"
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Terminal UI
ratatui = "0.28"
crossterm = "0.28"

# HTTP client for Ollama
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Python integration
pyo3 = { version = "0.22", features = ["auto-initialize"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
clap = { version = "4.0", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# GUI Framework
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "persistence", "x11"] }
egui_extras = { version = "0.28", features = ["default", "image"] }


[package]
name = "ai-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
terminal-ui = { path = "terminal-ui" }
egui-ui = { path = "egui-ui" }
ollama-client = { path = "ollama-client" }
python-bridge = { path = "python-bridge" }
system-tools = { path = "system-tools" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
egui_extras = { workspace = true }

[[bin]]
name = "ai-terminal-gui"
path = "src/gui_main.rs"

[[bin]]
name = "debug-ollama"
path = "debug_ollama.rs"
