[package]
name = "ollama-client"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP client for Ollama
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }

# Tracing
tracing = { workspace = true }

# JSON-RPC for MCP
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-server-utils = "18.0"
jsonrpc-core-client = "18.0"

# For tests
wiremock = "0.5"
async-stream = "0.3"

[[bin]]
name = "ollama-mcp-server"
path = "src/bin/mcp_server.rs"