[package]
name = "python-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
