[package]
name = "terminal-emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
portable-pty = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strip-ansi-escapes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }