[package]
name = "terminal-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
terminal-emulator = { path = "../terminal-emulator" }