[package]
name = "ai-terminal-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.28.0"
crossterm = "0.28.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"