[package]
name = "egui-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI Framework
egui = { workspace = true }
eframe = { workspace = true }

# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Other crates in workspace
ollama-client = { path = "../ollama-client" }
python-bridge = { path = "../python-bridge" }
system-tools = { path = "../system-tools" }
