[package]
name = "system-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-tools"
path = "src/bin/test-tools.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1.0"
walkdir = "2.0"
sysinfo = "0.30"
nix = "0.27"
libc = "0.2"
reqwest = { workspace = true }
