[package]
name = "terminal-emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
# PTY handling
portable-pty = "0.8"

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1.5", features = ["v4", "serde"] }

# Terminal parsing (for ANSI codes)
strip-ansi-escapes = "0.2"
vte = "0.13"

# Cross-platform support
crossterm = { workspace = true }
