[package]
name = "terminal-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ollama-client = { path = "../ollama-client" }
python-bridge = { path = "../python-bridge" }
terminal-emulator = { path = "../terminal-emulator" }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { workspace = true }
futures-util = { workspace = true }
